# Metrology

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  Metrology.sln  README.md  READMETOO.md
CALINE3/: CALINE3.EXP  README.md
CALINE3/Application/: Aliases.cs  Application.csproj  Const.cs  Euclid2D.cs  Job.cs  JobReader.cs  Link.cs  LinkActive.cs  LinkElement.cs  Main.cs  Meteo.cs  Plume.cs  Receptor.cs  Report.cs  Statistics.cs
CALINE3/Application/Properties/: launchSettings.json
CALINE3/Benchmark/: Benchmark.csproj  Program.cs
CALINE3/UnitsOfMeasurement/: Directory.Build.targets  Math.cs  PPMExt.cs  UnitsOfMeasurement.csproj
CALINE3/UnitsOfMeasurement/Core/: ILevel.cs  IQuantity.cs  Proxy.cs  Scale.cs  ScaleReferencePointAttribute.cs  SymbolCollection.cs  Unit.cs
CALINE3/UnitsOfMeasurement/Parsers/: LevelParser.cs  NumericParser.cs  QuantityParser.cs
CALINE3/UnitsOfMeasurement/RuntimeLoader/: Compiler.cs  Definitions.cs  Generator.cs  IO.cs  Parser.cs  RuntimeLoader.cs
CALINE3/UnitsOfMeasurement/Templates/: aliases.xslt  catalog.xslt  definitions.txt  report.xslt  scale.xslt  unit.xslt
Demo/Benchmark/: Benchmark.csproj  Program.cs
Demo/Benchmark2/: Benchmark2.csproj  Program.cs
Demo/Bullet/: Aliases.cs  Benchmark.cs  Bullet.Measured.cs  Bullet.Plain.cs  Bullet.csproj  Program.cs  Sampler.Measured.cs  Timer.cs
Demo/Currencies/: Currencies.csproj  Program.cs
Demo/RuntimeUnits/: Program.cs  RuntimeUnits.csproj  TranslationContext.cs
Demo/UnitsOfMeasurement/: Directory.Build.targets  Math.cs  UnitsOfMeasurement.csproj
Demo/UnitsOfMeasurement/Core/: ILevel.cs  IQuantity.cs  Proxy.cs  Scale.cs  ScaleReferencePointAttribute.cs  SymbolCollection.cs  Unit.cs
Demo/UnitsOfMeasurement/Parsers/: LevelParser.cs  NumericParser.cs  QuantityParser.cs
Demo/UnitsOfMeasurement/RuntimeLoader/: Compiler.cs  Decompiler.cs  Definitions.cs  Generator.cs  IO.cs  LateUnits.cs  Parser.cs  RuntimeLoader.cs  TranslationContext.cs
Demo/UnitsOfMeasurement/Templates/: aliases.xslt  catalog.xslt  definitions.txt  report.xslt  scale.xslt  unit.xslt
Demo/UnitsOfMeasurementTest/: CatalogTest.cs  Dimensions.cs  Levels.cs  Parsers.cs  Quantities.cs  UnitsOfMeasurementTest.csproj
Docs/: Components.md  Definitions.md  DimAnalysisExample.md  Families.md  ProjectCPP.md  ProjectCS.md  Quantities-vs-Levels.md  UserGuide.md  UsingCPP.md  UsingCS.md
Generator/Definitions/: AST.cs  Definitions.cs  Definitions.csproj  ExprBuilder.cs  IASTVisitor.cs  IExprBuilder.cs  ParseScale.cs  ParseUnit.cs  Parser.cs  README.md  UnitsGrammar.txt
Generator/Definitions/IO/: DumpOption.cs  FilePath.cs  TextFile.cs  TranslationContext.cs
Generator/Definitions/Language/: Context.cs  ContextCPP.cs  ContextCS.cs  DecimalAgent.cs  DoubleAgent.cs  FloatAgent.cs  NumericAgent.cs  Phrasebook.cs
Generator/Definitions/Lexer/: CharReader.cs  Lexer.cs  Symbol.cs  Token.cs  TokenReader.cs
Generator/Definitions/Terms/: BinaryOperation.cs  DimExpr.cs  Dimension.cs  Measure.cs  NumExpr.cs  Numeric.cs  Scale.cs  Term.cs  Unit.cs
Generator/Model/: Model.csproj  README.md
Generator/Model/XML/: AliasingModel.cs  CatalogModel.cs  Model.cs  ReportModel.cs  ScaleModel.cs  TranslationContext.cs  UnitModel.cs  XsltTemplate.cs
Generator/Parser/: AST.cs  AbstractType.cs  BinaryOperation.cs  Dimension.cs  DimensionalExpression.cs  IASTEncoder.cs  Lexer.cs  LexerReader.cs  LexerSymbol.cs  LexerToken.cs  MeasureType.cs  Numeral.cs  NumeralExpression.cs  ParseScale.cs  ParseUnit.cs  Parser.cs  Parser.csproj  README.md  ScaleType.cs  UnitType.cs  UnitsGrammar.txt
Generator/SourceGenerator/: Generator.cs  Mangh.Metrology.SourceGenerator.props  Program.cs  README.md  SourceGenerator.csproj  TemplateName.cs  TemplateNames.cs  TranslationContext.cs
Generator/UnitGenerator/: Generator.cs  Program.cs  README.md  TranslationContext.cs  UnitGenerator.csproj
Generator/Xslt/: README.md
Generator/Xslt/GeneratorApp/: Generator.cs  GeneratorApp.csproj  Program.cs
Generator/Xslt/SourceGenerator/: AliasProvider.cs  CatalogProvider.cs  DefinitionProvider.cs  Program.cs  Provider.cs  README.md  ReportProvider.cs  ScaleProvider.cs  SourceGenerator.csproj  SourceGenerator.props  UnitProvider.cs
Generator/Xslt/Translator/: AliasTranslator.cs  CatalogTranslator.cs  README.md  ReportTranslator.cs  ScaleTranslator.cs  Translator.cs  Translator.csproj  UnitTranslator.cs
ProjectTemplate/: ProjectTemplate.csproj  README.md
ProjectTemplate/CPPUnits/: CPPUnits.csproj  README.md
ProjectTemplate/CPPUnits/Metrology/: CMakeLists.txt
ProjectTemplate/CPPUnits/Metrology/.template.config/: template.json
ProjectTemplate/CPPUnits/Metrology/Templates/: definitions.txt  math-constants.xslt  replace-string.xslt  report.xslt  scale.xslt  unit.xslt
ProjectTemplate/CPPUnits/Metrology/Units/detail/: to_string.h
ProjectTemplate/CSUnits/: CSUnits.csproj  README.md
ProjectTemplate/CSUnits/Metrology/: %PROJECT%.csproj  Math.cs
ProjectTemplate/UnitsOfMeasurement/: Directory.Build.targets  Math.cs  Metrological.Namespace.csproj
ProjectTemplate/UnitsOfMeasurement/.template.config/: template.json
ProjectTemplate/UnitsOfMeasurement/Core/: ILevel.cs  IQuantity.cs  Proxy.cs  (+4 more)
(+46 files in other folders)
